--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,6 @@
 *.html linguist-language=false
 *.css linguist-language=false
+*.md linguist-vendored=true
+*.md linguist-language=Python
 
 100.00% Ruby
